--- a/Code/Etude indicateur Camme/graphiques-rapport.tex
+++ b/Code/Etude indicateur Camme/graphiques-rapport.tex
@@ -89,4 +89,6 @@
 
 \begin{center}\includegraphics{img/rmd-graphCVS-1} \end{center}
 
+\begin{center}\includegraphics{img/rmd-graphCoefCVS-1} \end{center}
+
 \end{document}
