--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -78,6 +78,7 @@ sous l'encadrement de Benjamin Muller (Inria)}
 \usepackage{subcaption}
 \usepackage{amsfonts}
 \usepackage{dsfont}
+\usepackage{xspace}
 
 
 \usepackage[tikz]{bclogo}
