--- a/Redaction/Rapport_Final/Rapport.tex
+++ b/Redaction/Rapport_Final/Rapport.tex
@@ -1269,7 +1269,7 @@ En quelques mots, c'est un algorithme qui repose sur l'utilisation de moyennes m
 
 Le graphique \ref{fig:coefcvscjo} trace l'évolution des coefficients saisonniers pour nos indicateurs de sentiment.
 L'évolution des coefficients saisonniers de l'indicateur de sentiment calculé à partir modèle de référence suggère que la saisonnalité de cette série est faible.
-L'étude de ceux de l'indicateur calculé à partir du modèle \emph{word2vec} suggère que les tweets sont globalement plus pessimistes en septembre et février, et plus optimistes en avril, octobre et décembre.
+L'étude de ceux de l'indicateur calculé à partir du modèle \emph{word2vec} suggère que les tweets sont globalement plus pessimistes en février et mars, et plus optimistes en avril, août et décembre.
 
 \begin{figure}[htp]
 {\centering\includegraphics[width = \textwidth]{img/rmd-graphCoefCVS-1}}
