--- a/Code/Etude Barometre/graphique-conclu.tex
+++ b/Code/Etude Barometre/graphique-conclu.tex
@@ -102,11 +102,11 @@
 
 \begin{figure}
 
-{\centering \includegraphics{img/rmd-graphSentiments-1} 
+{\centering \includegraphics{img/rmd-graphConclu-1} 
 
 }
 
-\caption{test}\label{fig:graphSentiments}
+\caption{test}\label{fig:graphConclu}
 \end{figure}
 
 \end{document}
